objects/kugo2p__VAT__c.object
<CustomObject>
    <description>Kugamon - Related object to Kugamon Settings to store tax jurisdiction. For Admin use only.</description>
    <fields>
        <fullName>kugo2p__AccountingGroup__c</fullName>
        <label>Accounting Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Sale</fullName>
                </value>
                <value>
                    <fullName>Consumer Sale</fullName>
                </value>
                <value>
                    <fullName>Internal Sale</fullName>
                </value>
                <value>
                    <fullName>Reseller Sale</fullName>
                </value>
                <value>
                    <fullName>Partner Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__KugamonSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kugamon Setting</label>
        <referenceTo>kugo2p__KugamonSetting__c</referenceTo>
        <relationshipName>VAT</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>VAT/GST</label>
    <nameField>
        <label>VAT/GST</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAT/GST</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>